# p9m4

./: .gitignore  CMakeLists.txt  README.md  VERSION_DATE.h  actions.cpp  actions.h  demodulate.cpp  demodulate.h  forward_subsume.cpp  forward_subsume.h  giv_select.cpp  giv_select.h  index_lits.cpp  index_lits.h  main.cpp  pred_elim.cpp  pred_elim.h  prover9.kdev4  prover9vglobais.cpp  prover9vglobais.h  provers.cpp  provers.h  search.cpp  search.h  search_structures.h  semantics.cpp  semantics.h  unfold.cpp  unfold.h  utilities.cpp  utilities.h  white_black.cpp  white_black.h
apps/: clausefilter.cpp  clausetester.cpp  complex.cpp  directproof.cpp  dprofiles.cpp  genterms.cpp  idfilter.cpp  inputs_util.cpp  inputs_util.h  interpfilter.cpp  interpformat.cpp  isofilter.cpp  isofilter0.cpp  isofilter2.cpp  latfilter.cpp  miniscope.cpp  mirror-flip.cpp  olfilter.cpp  perm3.cpp  prooftrans.cpp  renamer.cpp  rewriter.cpp  rewriter2.cpp  sigtest.cpp  test_clause_eval.cpp  test_complex.cpp  unfast.cpp  upper-covers.cpp
inputs/: 100_skew_lattices.in  102_tarski.in  104_wajsberg_hoop.in  106_mv.in  107_ortho.in  108_ortho_modular.in  109_quasi_implication_algebra.in  110_idemp_semiring.in  119_left_closure_semi.in  121_inv_semi.in  122_domain_range_semi.in  123_antidomain_monoid.in  124_sp_semi.in  125_closable_sp_semi.in  127_involutory_quandle.in  12_bounded_lattice.in  144_double_ward_quasi.in  146_left_disemi.in  148_disemi.in  152_dimonoid.in  15_brouwerian_sl.in  160_associative_dimonoid.in  16_chain.in  17_clifford.in  1_adl.in  23_comm_ord_monoid.in  24_comm_ord_semi.in  31_comp_modular_lattice.in  32_loop.in  35_directoid.in  3_bck.in  45_hoop.in  50_invol_lattices.in  58_m_zeroid.in  5_bck_lattices.in  6_bck_meet.in  70_neardistr_lattice.in  71_normal_band.in  73_ockham.in  74_order.in  (+43 more)
ladr/: .directory  ac_redun.cpp  ac_redun.h  accanon.cpp  accanon.h  attrib.cpp  attrib.h  avltree.cpp  avltree.h  backdemod.cpp  backdemod.h  banner.cpp  banner.h  basic.cpp  basic.h  btm.cpp  btm.h  btu.cpp  btu.h  clash.cpp  clash.h  clause_eval.cpp  clause_eval.h  clause_misc.cpp  clause_misc.h  clauseid.cpp  clauseid.h  clauses.cpp  clauses.h  clausify.cpp  clausify.h  clist.cpp  clist.h  clock.cpp  clock.h  cnf.cpp  cnf.h  complex.cpp  complex.h  compress.cpp  (+118 more)
mace4/: arithmetic.cpp  arithmetic.h  cell.cpp  cell.h  cmdline.cpp  cmdline.h  cube.cpp  cube.h  estack.cpp  estack.h  ground.cpp  ground.h  mace4.cpp  mace4.h  mace4globalvalues.cpp  mace4globalvalues.h  mace4vglobais.cpp  mace4vglobais.h  main.cpp  msearch.cpp  msearch.h  mstate.cpp  mstate.h  mstats.cpp  mstats.h  negpropindex.cpp  negpropindex.h  options.cpp  options.h  partition.cpp  partition.h  propagate.cpp  propagate.h  select.cpp  select.h  smallprime.cpp  smallprime.h  syms.cpp  syms.h
mace4/inc/: isofilter.h  model.h
mace4/inc/isonaut/: isofilter.h  model.h
mace4/inc/lexmin/: minlex_filter.h
utils/cubing/: analyzer.py  bootstrap.py  controller.py  counter.py  extend_cubes.py  isonaut.py  isonaut.sh  run.sh  run_cubes.py  run_isonaut.py  user_cpu.py
utils/mace4/: bootstrap.py  cube_analyzer.py  extend_cubes.py  invariants.py  iso_cubes.py  iso_cubes_multi.py  isofilter.g  isofilter.py  multi_cube_analyzer.py  old_extend_cubes.py  readme.md  run_cubes.py
